--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -7,6 +7,7 @@
 <%#= @con.inspect %>
 <%#= @users.count %>
 <%#= @userss.inspect %>
+
 <% if current_user.try(:type) == "ManagerUser" || current_user.try(:type) == "Super" %>
 <%= render 'manager', contract: @contracts %>
 <% elsif current_user.try(:type) == "Super" %>
@@ -16,6 +17,9 @@
  <% else %>
  <%= render 'dancer', contract: @contracts %>
 
+ <% end %>
+ <% if @systemmessage.present? %>
+ <div class='vertical-center'> <div class="container"> <div class="text-center"> <div class='well'> <%= @systemmessage %> </div> </div> </div> </div>
  <% end %>
 <br>
 <%#=  @manger.delete(current_user.actcode_name) %>
