--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,11 +45,11 @@
               <%= f.error_messages %>
             <% end %>
 
-            <%= f.form_group :actcode_name do |f| %>
-              <%= f.label :actcode, class: "form-label" %>
-              <%= f.text_field :actcode_name, class: "" %>
-              <%= f.error_messages %>
-            <% end %>
+            <%#= f.form_group :actcode_name do |f| %>
+              <%#= f.label :actcode, class: "form-label" %>
+              <%#= f.text_field :actcode_name, class: "" %>
+              <%#= f.error_messages %>
+            <%# end %>
           </div>
         </div>
 
