--- a/app/views/actcodes/index.html.erb
+++ b/app/views/actcodes/index.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <div class="container">
-  <div class="row">
+  <div class="row mt30"><%= yield :actions %></br></br>
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <div class="sheet sheet-condensed">
         <div class="sheet-inner">
