--- a/app/views/actcodes/new.html.erb
+++ b/app/views/actcodes/new.html.erb
@@ -1,6 +1,6 @@
 <% @title = "New actcode" %>
 
-<div class="container">
+<div class="container mt30">
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <%= render 'form' %>
