--- a/app/views/show/_numberofthingsnet.html.erb
+++ b/app/views/show/_numberofthingsnet.html.erb
@@ -5,24 +5,13 @@
    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
 <dt>Contract Price </dt>
 <span class="metric-value">
-  <% if current_user.try(:type) == "Independent"  %>
-<%= content_tag(:strong,"#{number_to_currency(contract.contractprice)}")  unless self.blank? || contract.contract_price == 0  %><br>
-<% end %>
-<% else %>
-  <%= content_tag(:strong,"#{number_to_currency(contract.contractprice)}")  unless self.blank? || contract.contract_price == 0  %><br>
+<%= content_tag(:strong,"#{number_to_currency(contract.act_net)}")  unless self.blank? || contract.act_net == 0  %><br>
+
 </span>
 </div>
 
 
 
-<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<dt>Act Net:</dt>
-<span class="metric-value">
-<%= content_tag(:strong,"#{number_to_currency(contract.act_net)}") unless  self.blank? || contract.act_net == 0 %>
-
-</span>
-
-</div>
 
 
 
