updated usersignup and actcode

--- a/app/views/actcodes/_form.html.erb
+++ b/app/views/actcodes/_form.html.erb
@@ -4,6 +4,7 @@
 <%= f.input :actcode, class: 'control-label col-md-2' %>
 <%= f.association :management, class: 'form-control control-label col-md-2' %>
 <%= f.input :description, class: 'form-control' %>
+<%= f.input :status, class: 'form-control' %>
 <%= f.button :submit, class: 'btn btn-primary' %>
 <% end %>
 </div>
