--- a/app/views/layouts/_user_nav.html.erb
+++ b/app/views/layouts/_user_nav.html.erb
@@ -6,7 +6,7 @@
           <span class="sr-only">Toggle navigation</span>
           <span>MENU</span>
         </button>
-        <a href="#" class="navbar-brand"><%= app_name %></a>
+        <a href="http://cmgv3.com" class="navbar-brand"><%= app_name %></a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
