--- a/app/views/show/_weddingstuff.html.erb
+++ b/app/views/show/_weddingstuff.html.erb
@@ -2,8 +2,11 @@
 <div >
 <hr>
   <%= content_tag(:dt, "Cocktail Instrumentation: #{@contract.cocktail_instrumentation}", class: "text-danger mb0") unless @contract.cocktail_instrumentation.blank? %>
-
    <%= content_tag(:dt, "Cocktail Time:                    #{@contract.cocktail_time}", class: "text-danger mb0") unless @contract.cocktail_time.blank? %>
+   <%= content_tag(:dt, "Cocktail Time:                    #{@contract.cocktail_time}", class: "text-danger mb0") unless @contract.cocktail_time.blank? %>
+     <%= content_tag(:dt, "Ceremony Instrumentation: #{@contract.ceremony_instrumenttation}", class: "text-danger mb0") unless @contract.ceremony_instrumenttation.blank? %>
+      <%= content_tag(:dt, "Ceremony Time:                    #{@contract.ceremony_start_time}", class: "text-danger mb0") unless @contract.ceremony_start_time.blank? %>
+
  </div>
 
 
