fixed cell phone missing

--- a/app/views/show/_blank.html.erb
+++ b/app/views/show/_blank.html.erb
@@ -21,6 +21,7 @@
 
                     <%= content_tag(:h5, "Home Phone:              #{contract.home_phone}", class: "mb0") unless contract.home_phone.blank? %>
                     <%= content_tag(:h5, "Work Phone:              #{contract.work_phone}", class: "mb0") unless contract.work_phone.blank? %>
+                    <%= content_tag(:h5, "Cell Phone:              #{contract.cell_phone}", class: "mb0") unless contract.cell_phone.blank? %>
                </div>
                </div>
                           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
