--- a/app/views/show/_clientinfo.html.erb
+++ b/app/views/show/_clientinfo.html.erb
@@ -1,6 +1,7 @@
    <%= content_tag(:p, clientname, class: "lead mb0") unless clientname.blank? %>
    <%= content_tag(:p, "Home Phone:              #{@contract.home_phone}", class: "mb0") unless @contract.home_phone.blank? %>
    <%= content_tag(:p, "Work Phone:              #{@contract.work_phone}", class: "mb0") unless @contract.work_phone.blank? %>
+   <%= content_tag(:p, "Cell Phone:              #{@contract.cell_phone}", class: "mb0") unless @contract.cell_phone.blank? %>
 
    <%= content_tag(:p, "#{@contract.email_address}", class: "mb0") unless @contract.email_address.blank? %>
    <%#= content_tag(:p, "Home Phone:              #{@contract.home_phone}", class: "mb0") unless @contract.home_phone.blank? %>
