Added Sales User update search update

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -12,7 +12,7 @@
 <%= render 'manager', contract: @contracts %>
 <% elsif current_user.try(:type) == "Super" %>
 <%= render 'admin', contract: @contracts %>
-<% elsif current_user.try(:type) == "Sales" %>
+<% elsif current_user.try(:type) == "SalesUser" %>
 <%= render 'search', contract: @contracts %>
  <% else %>
  <%= render 'dancer', contract: @contracts %>
