--- a/app/views/contracts/_search.html.erb
+++ b/app/views/contracts/_search.html.erb
@@ -7,7 +7,7 @@
 <div class="sheet-inner">
 
     <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
-       <div class="form">fhfhfh
+       <div class="form">
          <%= form_tag(search_path, :method => "get", id: "search-form") do %>
          <%= text_field_tag :search, params[:search], placeholder: "Search By Date" %>
          <%#= text_field_tag :search, params[:search], placeholder: "Search ACTCODE", id: 'byact' %>
