--- a/app/views/layouts/_user_nav.html.erb
+++ b/app/views/layouts/_user_nav.html.erb
@@ -18,7 +18,7 @@
           <li class=""><%= link_to "Calendar", calendar_path %></li>
           <% if current_user.try(:type) == "Super" %><li class=""><%= link_to "All Jobs", alljobs_path %></li><li class=""><%= link_to "Actcodes", actcodes_path %></li><% end %>
           <% if current_user.try(:type) == "ManagerUser" %> <li class=""><%= link_to "Staff", players_path %></li> <% end %>
-          <% if current_user.try(:type) == "SalesUser" %><li class=""><%= link_to "Search", search_path %></li><% end %>
+          <% if current_user.try(:type) == "Super" %><li class=""><%= link_to "Search", search_path %></li><% end %>
             <% end %>
           <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %> </li>
           <!--<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Clusters <span class="caret"></span></a>-->
