--- a/app/views/contracts/_groupjobs.html.erb
+++ b/app/views/contracts/_groupjobs.html.erb
@@ -7,6 +7,7 @@
 </div>
 <div class="panel-body text-green-400">
 <h2 class="m0"><%= (@contractfour).count %></h2>
+<h2 class="m0"><%= (@contractdidconfirm).count %></h2>
 </div>
 <div class="panel-footer">
 <div class="row">
