add dj  and setup charge

--- a/app/views/show/_numberofthings.html.erb
+++ b/app/views/show/_numberofthings.html.erb
@@ -40,6 +40,7 @@
 <span class="metric-value">
 <%= content_tag(:strong,"#{contract.number_of_dancers}") %>
 
+
 </span>
 
 </div>
@@ -55,6 +56,15 @@
 <dt>Number of Horns</dt>
 <span class="metric-value">
 <%= content_tag(:strong,"#{contract.number_of_horns}") %>
+</span>
+
+</div>
+
+<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+   <hr>
+<dt>DJ Tech</dt>
+<span class="metric-value">
+<%= content_tag(:strong,"#{contract.tech}") %>
 </span>
 
 </div>
