--- a/app/views/show/_moneysection.html.erb
+++ b/app/views/show/_moneysection.html.erb
@@ -45,6 +45,14 @@
 </span>
 
 </div>
+
+<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+<dt class="text-uppercase">early setup time</dt>
+<span class="metric-value pt20 pb20 text-success">
+<%= content_tag(:strong,"#{contract.early_setup_time}") unless self.blank? || contract.early_setup_time == 0 %>
+</span>
+
+</div>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
 <dt class="text-uppercase">giveaways charge</dt>
 <span class="metric-value pt20 pb20 text-success">
@@ -52,7 +60,9 @@
 </span>
 
 </div>
+
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+   <hr>
 <dt class="text-uppercase">charge per horn</dt>
 <span class="metric-value pt20 pb20 text-success">
    <%= content_tag(:strong,"#{contract.number_of_horns}"  " @"  "#{number_to_currency(contract.charge_per_horn)}") unless self.blank? || contract.number_of_horns == 0 %>
