--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,13 +8,13 @@
         <p class="p0 m0">Sign Up</p>
       </header>
     </div>
+    <% if current_user.try(:spuer?) %>
     <div class="vertical-center">
 
 
     <div class="col-md-4 mt20">
       <div class="sheet-inner text-left">
-
-
+        
       <%= simple_form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
         <%= f.input :first_name %>
         <%= f.input :last_name %>
@@ -27,6 +27,7 @@
         <%= f.input :type, collection: ["Independent", "Manager","Netmanager","Leader", "User" ]%>
         <%= f.button :submit %>
       <% end %>
+         <% end %>
     </div>
     <!-- <div class="row mt20">
       <div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 text-right">
