--- a/app/views/show/_moneysection.html.erb
+++ b/app/views/show/_moneysection.html.erb
@@ -5,46 +5,46 @@
 <%#= @contract.referral_fee_amount %>
 <div class="col-lg-12 col-md-12 col-sm-12 text-center pt20 pb20 bg-warning">
 
-<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+<!-- <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
 <dt class="text-uppercase">non-commission charges</dt>
 <span class="metric-value pt20 pb20 text-success">
-   <%= content_tag(:strong,"#{number_to_currency(contract.non_commissionable_charges)}") unless self.blank? || contract.non_commissionable_charges == 0 %>
+   <#%= content_tag(:strong,"#{number_to_currency(contract.non_commissionable_charges)}") unless self.blank? || contract.non_commissionable_charges == 0 %>
 
 </span>
 
-</div>
+</div> -->
 
 
 
 
 
-<!-- SECTION 2 --> 
+<!-- SECTION 2 -->
 
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<dt class="text-uppercase">cocktails charge</dt>
+<dt class="text-uppercase">cocktails Music</dt>
 <span class="metric-value pt20 pb20 text-success">
-<%= content_tag(:strong,"#{number_to_currency(contract.cocktails_charge)}") unless  self.blank? || contract.cocktails_charge == 0 %>
+<%= content_tag(:strong,"Yes") unless  self.blank? || contract.cocktails_charge == 0 %>
 
 </span>
 </div>
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<dt class="text-uppercase">ceremony charge</dt>
+<dt class="text-uppercase">ceremony music</dt>
 <span class="metric-value pt20 pb20 text-success">
-<%= content_tag(:strong,"#{number_to_currency(contract.ceremony_charge)}") unless self.blank? || contract.ceremony_charge == 0 %>
+<%= content_tag(:strong,"Yes") unless self.blank? || contract.ceremony_charge == 0 %>
 
 </span>
 
 </div>
 
-<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+<!-- <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
 <dt class="text-uppercase">early setup charge</dt>
 <span class="metric-value pt20 pb20 text-success">
-<%= content_tag(:strong,"#{number_to_currency(contract.early_setup_charge)}") unless self.blank? || contract.early_setup_charge == 0 %>
+<#%= content_tag(:strong,"#{number_to_currency(contract.early_setup_charge)}") unless self.blank? || contract.early_setup_charge == 0 %>
 </span>
 
-</div>
+</div> -->
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
 <dt class="text-uppercase">early setup time</dt>
@@ -53,24 +53,24 @@
 </span>
 
 </div>
-<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+<!-- <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
 <dt class="text-uppercase">giveaways charge</dt>
 <span class="metric-value pt20 pb20 text-success">
-<%= content_tag(:strong,"#{number_to_currency(contract.giveaways_charge)}") unless self.blank? || contract.giveaways_charge == 0 %>
+<#%= content_tag(:strong,"#{number_to_currency(contract.giveaways_charge)}") unless self.blank? || contract.giveaways_charge == 0 %>
 </span>
 
-</div>
+</div> -->
 
-<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+<!-- <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
    <hr>
 <dt class="text-uppercase">charge per horn</dt>
 <span class="metric-value pt20 pb20 text-success">
-   <%= content_tag(:strong,"#{contract.number_of_horns}"  " @"  "#{number_to_currency(contract.charge_per_horn)}") unless self.blank? || contract.number_of_horns == 0 %>
+   <#%= content_tag(:strong,"#{contract.number_of_horns}"  " @"  "#{number_to_currency(contract.charge_per_horn)}") unless self.blank? || contract.number_of_horns == 0 %>
 
 
 </span>
 
-</div>
+</div> -->
 <div class="clearfix"></div>
 </div>
 
