adding report file

--- a/app/views/show/_blank.html.erb
+++ b/app/views/show/_blank.html.erb
@@ -1,6 +1,14 @@
-   <div class="clearfix"></div>
+<!-- MAIN FRONT PAGE  -->
+<div class="clearfix"></div>
  <div class="page-header row row-same-height"><h4 class="col-sm-12 col-xs-height text-uppercase">Upcoming Events</h4> </div>
+ <div>
+    <% if user_signed_in? %>
+    <% if current_user.try(:type) == "Super" %>
+<%= render 'newcontracts', contract: @connew  %>   <% else %>
 
+   <% end %>
+   <% end %>
+ </div>
  <div>
    <% contract.each do |contract| %>
    <div class="sheet-inner m20 pl30 pr30 pt20">
