--- a/app/views/contracts/report.html.erb
+++ b/app/views/contracts/report.html.erb
@@ -1,16 +1,20 @@
 <%#= yield :charts_js %>
 <%#= javascript_include_tag "fusioncharts" %>
 <%#= javascript_include_tag "fusioncharts/fusioncharts"%>
-<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+<%#= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
 
 
 <div class="sheet-inner">
    <div>
-         
+
  <%= @contract.count %>
- <%= @mang_user.count %>
-    <%= @contract_manager %>
- <%= @collect_managers %>
+ <% @contract.each do |c| %>
+    <li class="mb10"><b class="text-amber-900"><%= link_to "#{c.act_booked}" , c, :class => "text-blue-grey-800" %></b> <%= link_to " - #{c.first_name} #{c.last_name}" , c %> <span class="label ml30 <%= "#{c.contract_status.gsub!(/[^0-9A-Za-z]/, '')}" %>"><%= c.contract_status %></span> <%= c.date_of_event %></li>
+ <% end %>
+
+ <%#= @mang_user.count %>
+    <%#= @contract_manager %>
+ <%#= @collect_managers %>
    <%#= line_chart @contract.group_by_month(:date_of_event).sum(:contract_price) %>
    <%#= column_chart @contract.group_by_month(:created_at, format: "%a").sum(:contract_price) %>
    <%#= column_chart @contract.group_by_month(:created_at, format: "%b").sum(:contract_price) %>
